--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Jekyll Resume Theme
 
 # Site settings
-title: Jekyll Resume
+title: Juan Luna
 email: email@domain.com
 description: Jekyll Resume is a mega simple resume theme for Jekyll.
 baseurl: ""
-url: "http://mattcouchman.co.uk/jekyll-resume"
+url: "http://juanluna.co"
 name: Matt Couchman
 job: front end engineer
 location: Birmingham, UK
