--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Juan Luna
 email: contacto@juanluna.co
 description: A ver a ver a ver.
 baseurl: ""
-url: "http://juanluna.co"
+url: "http://blog.juanluna.co"
 name: Juan Luna
 job: front end developer & web designer
 location: Bogotá, CO
