--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ name: Juan Luna
 job: front end developer & web designer
 location: Bogotá, CO
 languages: HTML, CSS and Javascript
-twitter_username: mattcouchman
-github_username:  mattcouchman
-codepen_username:  mattcouchman
+twitter_username: juanlunaco
+github_username:  juanlunaco
+codepen_username:  juanlunaco
 email_address: some@email.com
 
 # Build settings
